--- a/_posts/2017-06-24-giddyup.markdown
+++ b/_posts/2017-06-24-giddyup.markdown
@@ -3,5 +3,6 @@ layout: post
 title:  "this is a test post"
 date: 2017-06-24
 description: ""getting started""
+category: does not matter
 ---
 Hot balls of fire illuminating what was cold
