Update and rename 2020-09-09-note.markdown to 2020-09-09-notev2.markdown

--- a/_posts/2020-09-09-notev2.markdown
+++ b/_posts/2020-09-09-notev2.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "2020-09-09, note"
+title:  "2020-09-09, note v2"
 date:   2020-09-09
 description: "woopties"
 categories: note
@@ -16,9 +16,8 @@ mysticism the passing scent has always carried,\\
 only consciousness has shifted; patience has\\
 lost its shape;
 
-death has entered only where you have allowed\\
-your eyes to linger for too long, continuing\\
-to look after you've already see -- you know\\
-this is how what you call monsters are formed.
-
-Of course, i digress. of course i digress
+death only exists in your mind, and you are\\
+the one who loses.\\
+be sad for no one, in anything you do. be sad\\
+only when it is what you are in, and take pride\\
+in what you see there, golden, worthy.
